feat(market): İş Yatırım/uzmanpara stock enrichment (company profile + bidirectional index membership), bond/fund N+1 fixes, Yahoo bounded-parallel refresh, EVDS-free macro slugs, fund valör/risk, dead-column cleanup